Add supports for JDK 25