@@ -7,7 +7,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
@@ -107,7 +107,7 @@ public class RedisMembership implements Membership, SchedulingConfigurer {
 				boolean alive = false;
 				String url = "http://" + member.substring(member.lastIndexOf('@') + 1) + "/_ping?_internal_testing_";
 				try {
-					HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+					HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
 					conn.setConnectTimeout(3000);
 					conn.setReadTimeout(2000);
 					conn.setInstanceFollowRedirects(false);
